--- a/cucurbitaMaxima.properties
+++ b/cucurbitaMaxima.properties
@@ -1,1 +1,4 @@
+# ######## SHEET ########
 sheetFile=../data/sheet.csv
+#sheetLabels=["Règne", "Division", "Classe", "Ordre", "Famille", "Genre"]
+#sheetLabelsId=["reignId", "divisionId", "classId", "orderId", "familyId", "genderId"]
