Change properties & names

--- a/cucurbitaMaxima.properties
+++ b/cucurbitaMaxima.properties
@@ -1,4 +1,6 @@
-# ######## SHEET ########
-sheetFile=../data/sheet.csv
+# ######## VEGETAL SHEET ########
+vegetalSheetFileName=vegetalSheet.csv
+vegetalSheetFilePath=../data/vegetalSheet.csv
 #sheetLabels=["Règne", "Division", "Classe", "Ordre", "Famille", "Genre"]
 #sheetLabelsId=["reignId", "divisionId", "classId", "orderId", "familyId", "genderId"]
+
