--- a/cucurbitaMaxima.properties
+++ b/cucurbitaMaxima.properties
@@ -4,3 +4,10 @@ vegetalSheetFilePath=../data/vegetalSheet.csv
 #sheetLabels=["Règne", "Division", "Classe", "Ordre", "Famille", "Genre"]
 #sheetLabelsId=["reignId", "divisionId", "classId", "orderId", "familyId", "genderId"]
 
+# ######## SAWING SHEET ########
+sawingSheetFileName=sawingSheet.csv
+sawingSheetFilePath=../data/sawingSheet.csv
+
+groundArray=["Humif&egrave;re","Argileux","Limoneux","Sableux"]
+typeArray=["Semi","Plant","Bulbe"]
+
