Moon period & select name from vegetal sheet

--- a/cucurbitaMaxima.properties
+++ b/cucurbitaMaxima.properties
@@ -9,5 +9,5 @@ sawingSheetFileName=sawingSheet.csv
 sawingSheetFilePath=../data/sawingSheet.csv
 
 groundArray=["Humif&egrave;re","Argileux","Limoneux","Sableux"]
-typeArray=["Semi","Plant","Bulbe"]
+typeArray=["Semis","Plant","Bulbe"]
 
