--- a/cucurbitaMaxima.properties
+++ b/cucurbitaMaxima.properties
@@ -11,6 +11,7 @@ sawingSheetFilePath=../data/sawingSheet.csv
 groundArray=["Humif&egrave;re","Argileux","Limoneux","Sableux"]
 typeArray=["Semis","Plant","Bulbe"]
 
-sawingHeaderFile=["Nom","Variete","Phase lunaire debut","Phase lunaire fin","Phase lunaire note","Sol","Type","Date de plantation","Cycle vegetatif","Distance sur les rangs","Distance entre les rangs","Exposition","Temperature"]
-sawingHeaderIdFile=["nameSelect","variety","moonBegin","moonEnd","moonNote","groundSelect","typeSelect","plantDate","cycle","distanceL","distanceR","weather","temperature"]
+sawingHeaderFile=["Nom","Variete","Phase lunaire debut","Phase lunaire fin","Phase lunaire note","Sol","Type","Date de plantation","Cycle vegetatif","Date de recolte prevue","Distance sur les rangs","Distance entre les rangs","Exposition","Temperature"]
+sawingHeaderIdFile=["nameSelect","variety","moonBegin","moonEnd","moonNote","groundSelect","typeSelect","plantDate","cycle","cropDate","distanceL","distanceR","weather","temperature"]
+sawingForecastDate=Date de recolte prevue
 
