Forecast in progress

--- a/cucurbitaMaxima.properties
+++ b/cucurbitaMaxima.properties
@@ -15,3 +15,6 @@ sawingHeaderFile=["Nom","Variete","Phase lunaire debut","Phase lunaire fin","Pha
 sawingHeaderIdFile=["nameSelect","variety","moonBegin","moonEnd","moonNote","groundSelect","typeSelect","plantDate","cycle","cropDate","distanceL","distanceR","weather","temperature"]
 sawingForecastDate=Date de recolte prevue
 
+# ######## FORECAST ########
+forecastSawingData=["Nom","Variete","Date de plantation","Date de recolte prevue","Exposition","Temperature"]
+forecastSawingDataGroup=Nom
