Forecast in progress

--- a/cucurbitaMaxima.properties
+++ b/cucurbitaMaxima.properties
@@ -16,5 +16,7 @@ sawingHeaderIdFile=["nameSelect","variety","moonBegin","moonEnd","moonNote","gro
 sawingForecastDate=Date de recolte prevue
 
 # ######## FORECAST ########
-forecastSawingData=["Nom","Variete","Date de plantation","Date de recolte prevue","Exposition","Temperature"]
+forecastSawingData=["Variete","Date de plantation","Date de recolte prevue","Exposition","Temperature"]
 forecastSawingDataGroup=Nom
+forecastSawingDataDate=Date de recolte prevue
+forecastSawingDataDayGap=3
