--- a/cucurbitaMaxima.properties
+++ b/cucurbitaMaxima.properties
@@ -13,6 +13,7 @@ typeArray=["Semis","Plant","Bulbe"]
 
 sawingHeaderFile=["Nom","Variete","Phase lunaire debut","Phase lunaire fin","Phase lunaire note","Sol","Type","Date de plantation","Cycle vegetatif","Date de recolte prevue","Distance sur les rangs","Distance entre les rangs","Exposition","Temperature"]
 sawingHeaderIdFile=["nameSelect","variety","moonBegin","moonEnd","moonNote","groundSelect","typeSelect","plantDate","cycle","cropDate","distanceL","distanceR","weather","temperature"]
+sawingHeaderFileToDisplay=["Nom","Variete","Sol","Type","Date de plantation","Cycle vegetatif","Date de recolte prevue","Distance sur les rangs","Distance entre les rangs","Exposition","Temperature"]
 sawingForecastDate=Date de recolte prevue
 
 # ######## FORECAST ########
