Correct save form for sawing & vegetal

--- a/cucurbitaMaxima.properties
+++ b/cucurbitaMaxima.properties
@@ -1,20 +1,25 @@
 # ######## VEGETAL SHEET ########
 vegetalSheetFileName=vegetalSheet.csv
 vegetalSheetFilePath=../data/vegetalSheet.csv
-#sheetLabels=["Règne", "Division", "Classe", "Ordre", "Famille", "Genre"]
-#sheetLabelsId=["reignId", "divisionId", "classId", "orderId", "familyId", "genderId"]
+
+# File
+vegetalHeaderFile=["Regne", "Division", "Classe", "Ordre", "Famille", "Genre", "Nom binomial", "Ordre phylogenetique", "Famille phylogenetique"]
+vegetalHeaderIdFile=["reign", "division", "class", "order", "family", "gender", "binomialName", "orderCP", "familyCP"]
+vegetalHeaderForSawingSelect=Nom binomial
 
 # ######## SAWING SHEET ########
 sawingSheetFileName=sawingSheet.csv
 sawingSheetFilePath=../data/sawingSheet.csv
 
+# Selects
 groundArray=["Humif&egrave;re","Argileux","Limoneux","Sableux"]
 typeArray=["Semis","Plant","Bulbe"]
 
+# File
 sawingHeaderFile=["Nom","Variete","Phase lunaire debut","Phase lunaire fin","Phase lunaire note","Sol","Type","Date de plantation","Cycle vegetatif","Date de recolte prevue","Distance sur les rangs","Distance entre les rangs","Exposition","Temperature"]
 sawingHeaderIdFile=["nameSelect","variety","moonBegin","moonEnd","moonNote","groundSelect","typeSelect","plantDate","cycle","cropDate","distanceL","distanceR","weather","temperature"]
 sawingHeaderFileToDisplay=["Nom","Variete","Sol","Type","Date de plantation","Cycle vegetatif","Date de recolte prevue","Distance sur les rangs","Distance entre les rangs","Exposition","Temperature"]
-sawingForecastDate=Date de recolte prevue
+
 
 # ######## FORECAST ########
 forecastSawingData=["Variete","Date de plantation","Date de recolte prevue","Exposition","Temperature"]
