Correct remove and list for sawing & vegetal

--- a/cucurbitaMaxima.properties
+++ b/cucurbitaMaxima.properties
@@ -1,6 +1,7 @@
 # ######## VEGETAL SHEET ########
 vegetalSheetFileName=vegetalSheet.csv
 vegetalSheetFilePath=../data/vegetalSheet.csv
+vegetalCreateFilePath=../html/vegetalSheetCreate.php
 
 # File
 vegetalHeaderFile=["Regne", "Division", "Classe", "Ordre", "Famille", "Genre", "Nom binomial", "Ordre phylogenetique", "Famille phylogenetique"]
@@ -10,6 +11,7 @@ vegetalHeaderForSawingSelect=Nom binomial
 # ######## SAWING SHEET ########
 sawingSheetFileName=sawingSheet.csv
 sawingSheetFilePath=../data/sawingSheet.csv
+sawingCreateFilePath=../html/sawingSheetCreate.php
 
 # Selects
 groundArray=["Humif&egrave;re","Argileux","Limoneux","Sableux"]
