Add moon phases

--- a/cucurbitaMaxima.properties
+++ b/cucurbitaMaxima.properties
@@ -1,3 +1,7 @@
+# ############ HOME #############
+moonArray=["Nouvelle lune", "Premier quartier", "Pleine lune", "Dernier quartier"]
+moonArrayNameImg=["moonNew", "moonFirst", "moonFull", "moonLast"]
+
 # ######## VEGETAL SHEET ########
 vegetalSheetFileName=vegetalSheet.csv
 vegetalSheetFilePath=../data/vegetalSheet.csv
