--- a/cucurbitaMaxima.properties
+++ b/cucurbitaMaxima.properties
@@ -8,8 +8,9 @@ vegetalSheetFilePath=../data/vegetalSheet.csv
 vegetalCreateFilePath=../html/vegetalSheetCreate.php
 
 # File
-vegetalHeaderFile=["Regne", "Division", "Classe", "Ordre", "Famille", "Genre", "Nom binomial", "Ordre phylogenetique", "Famille phylogenetique"]
-vegetalHeaderIdFile=["reign", "division", "class", "order", "family", "gender", "binomialName", "orderCP", "familyCP"]
+vegetalHeaderFile=["Nom vernaculaire", "Regne", "Division", "Classe", "Ordre", "Famille", "Genre", "Nom binomial", "Ordre phylogenetique", "Famille phylogenetique"]
+vegetalHeaderIdFile=["vernacularName", "reign", "division", "class", "order", "family", "gender", "binomialName", "orderCP", "familyCP"]
+vegetalHeaderIdFileToDisplay=["Nom vernaculaire", "Nom binomial", "Ordre phylogenetique", "Famille phylogenetique"]
 vegetalHeaderForSawingSelect=Nom binomial
 
 # ######## SAWING SHEET ########
