Creation Date & sawing style

--- a/cucurbitaMaxima.properties
+++ b/cucurbitaMaxima.properties
@@ -19,7 +19,7 @@ typeArray=["Semis","Plant","Bulbe"]
 
 sawingHeaderFile=["Nom","Variete","Phase lunaire debut","Phase lunaire fin","Phase lunaire note","Sol","Type","Date de plantation","Cycle vegetatif","Date de recolte prevue","Distance sur les rangs","Distance entre les rangs","Exposition","Temperature"]
 sawingHeaderIdFile=["nameSelect","variety","moonBegin","moonEnd","moonNote","groundSelect","typeSelect","plantDate","cycle","cropDate","distanceL","distanceR","weather","temperature"]
-sawingHeaderFileToDisplay=["Nom","Variete","Sol","Type","Date de plantation","Cycle vegetatif","Date de recolte prevue","Distance sur les rangs","Distance entre les rangs","Exposition","Temperature"]
+sawingHeaderFileToDisplay=["Nom","Variete","Sol","Type","Date de plantation","Cycle vegetatif","Date de recolte prevue"]
 
 
 forecastSawingData=["Variete","Date de plantation","Date de recolte prevue","Exposition","Temperature"]
