--- a/cucurbitaMaxima.properties
+++ b/cucurbitaMaxima.properties
@@ -1,15 +1,17 @@
 moonArray=["Nouvelle lune", "Premier quartier", "Pleine lune", "Dernier quartier"]
 moonArrayNameImg=["moonNew", "moonFirst", "moonFull", "moonLast"]
 
+# VEGETAL
 vegetalSheetFileName=vegetalSheet.csv
 vegetalSheetFilePath=../data/vegetalSheet.csv
 vegetalCreateFilePath=../html/vegetalSheetCreate.php
 
-vegetalHeaderFile=["Nom vernaculaire", "Regne", "Division", "Classe", "Ordre", "Famille", "Genre", "Nom binomial", "Ordre phylogenetique", "Famille phylogenetique"]
-vegetalHeaderIdFile=["vernacularName", "reign", "division", "class", "order", "family", "gender", "binomialName", "orderCP", "familyCP"]
-vegetalHeaderIdFileToDisplay=["Nom vernaculaire", "Nom binomial", "Ordre phylogenetique", "Famille phylogenetique"]
+vegetalHeaderFile=["Nom vernaculaire", "Variete", "Regne", "Division", "Classe", "Ordre", "Famille", "Genre", "Nom binomial", "Ordre phylogenetique", "Famille phylogenetique"]
+vegetalHeaderIdFile=["vernacularName", "varietyName", "reign", "division", "class", "order", "family", "gender", "binomialName", "orderCP", "familyCP"]
+vegetalHeaderFileToDisplay=["Nom vernaculaire", "Nom binomial", "Ordre phylogenetique", "Famille phylogenetique"]
 vegetalHeaderForSawingSelect=Nom binomial
 
+# SAWING
 sawingSheetFileName=sawingSheet.csv
 sawingSheetFilePath=../data/sawingSheet.csv
 sawingCreateFilePath=../html/sawingSheetCreate.php
@@ -18,11 +20,21 @@ groundArray=["Humif&egrave;re","Argileux","Limoneux","Sableux"]
 typeArray=["Semis","Plant","Bulbe"]
 
 sawingHeaderFile=["Nom","Variete","Phase lunaire debut","Phase lunaire fin","Phase lunaire note","Sol","Type","Date de plantation","Cycle vegetatif","Date de recolte prevue","Distance sur les rangs","Distance entre les rangs","Exposition","Temperature"]
-sawingHeaderIdFile=["nameSelect","variety","moonBegin","moonEnd","moonNote","groundSelect","typeSelect","plantDate","cycle","cropDate","distanceL","distanceR","weather","temperature"]
-sawingHeaderFileToDisplay=["Nom","Variete","Sol","Type","Date de plantation","Cycle vegetatif","Date de recolte prevue"]
+sawingHeaderIdFile=["nameSelect", "variety", "moonBegin", "moonEnd", "moonNote", "groundSelect", "typeSelect", "plantDate", "cycle", "cropDate", "distanceL", "distanceR", "weather", "temperature"]
+sawingHeaderFileToDisplay=["Nom", "Variete", "Sol", "Type", "Date de plantation", "Cycle vegetatif", "Date de recolte prevue"]
 
+# FORECAST
+forecastSheetFileName=forecastSheet.csv
+forecastSheetFilePath=../data/forecastSheet.csv
+forecastCreateFilePath=../html/forecastSheetCreate.php
+
+forecastHeaderFile=["Nom vernaculaire", "Variete", "Date de plantation", "Poids", "Quantite", "Commentaire"]
+forecastHeaderIdFile=["nameSelect", "varietySelect", "plantDate", "weight", "quantity", "comment"]
+forecastHeaderFileToDisplay=["Nom vernaculaire", "Variete", "Date de plantation", "Poids", "Quantite"]
 
 forecastSawingData=["Variete","Date de plantation","Date de recolte prevue","Exposition","Temperature"]
 forecastSawingDataGroup=Nom
 forecastSawingDataDate=Date de recolte prevue
 forecastSawingDataDayGap=3
+vegetalHeaderForForecastSelect=Nom vernaculaire
+vegetalHeaderForForecastSubSelect=Variete
