--- a/cucurbitaMaxima.properties
+++ b/cucurbitaMaxima.properties
@@ -27,17 +27,17 @@ sawingHeaderFileToDisplay=["Nom", "Variete", "Sol", "Type", "Date de plantation"
 
 
 
-forecastSheetFileName=forecastSheet.csv
-forecastSheetFilePath=../data/forecastSheet.csv
-forecastCreateFilePath=../html/forecastSheetCreate.php
+harvestSheetFileName=harvestSheet.csv
+harvestSheetFilePath=../data/harvestSheet.csv
+harvestCreateFilePath=../html/harvestSheetCreate.php
 
-forecastHeaderFile=["Nom vernaculaire", "Variete", "Date de plantation", "Poids", "Quantite", "Commentaire"]
-forecastHeaderIdFile=["nameSelect", "varietySelect", "plantDate", "weight", "quantity", "comment"]
-forecastHeaderFileToDisplay=["Nom vernaculaire", "Variete", "Date de plantation", "Poids", "Quantite"]
+harvestHeaderFile=["Nom vernaculaire", "Variete", "Date de plantation", "Poids", "Quantite", "Commentaire"]
+harvestHeaderIdFile=["nameSelect", "varietySelect", "plantDate", "weight", "quantity", "comment"]
+harvestHeaderFileToDisplay=["Nom vernaculaire", "Variete", "Date de plantation", "Poids", "Quantite"]
 
-forecastSawingData=["Variete","Date de plantation","Date de recolte prevue","Exposition","Temperature"]
-forecastSawingDataGroup=Nom
-forecastSawingDataDate=Date de recolte prevue
-forecastSawingDataDayGap=3
-vegetalHeaderForForecastSelect=Nom vernaculaire
-vegetalHeaderForForecastSubSelect=Variete
+harvestSawingData=["Variete","Date de plantation","Date de recolte prevue","Exposition","Temperature"]
+harvestSawingDataGroup=Nom
+harvestSawingDataDate=Date de recolte prevue
+harvestSawingDataDayGap=3
+vegetalHeaderForHarvestSelect=Nom vernaculaire
+vegetalHeaderForHarvestSubSelect=Variete
