Harvest statistics temp

--- a/cucurbitaMaxima.properties
+++ b/cucurbitaMaxima.properties
@@ -31,9 +31,9 @@ harvestSheetFileName=harvestSheet.csv
 harvestSheetFilePath=../data/harvestSheet.csv
 harvestCreateFilePath=../html/harvestSheetCreate.php
 
-harvestHeaderFile=["Nom vernaculaire", "Variete", "Date de plantation", "Poids", "Quantite", "Commentaire"]
-harvestHeaderIdFile=["nameSelect", "varietySelect", "plantDate", "weight", "quantity", "comment"]
-harvestHeaderFileToDisplay=["Nom vernaculaire", "Variete", "Date de plantation", "Poids", "Quantite"]
+harvestHeaderFile=["Nom vernaculaire", "Variete", "Date de recolte", "Poids", "Quantite", "Commentaire"]
+harvestHeaderIdFile=["nameSelect", "varietySelect", "harvestDate", "weight", "quantity", "comment"]
+harvestHeaderFileToDisplay=["Nom vernaculaire", "Variete", "Date de recolte", "Poids", "Quantite"]
 
 vegetalHeaderForHarvestSelect=Nom vernaculaire
 vegetalHeaderForHarvestSubSelect=Variete
